@@ -1,9 +1,11 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.024
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
 requires "DBIx::Class::Core" => "0";
 requires "Ref::Util" => "0";
 requires "Safe::Isa" => "1.000008";
 requires "Types::SQL::Util" => "v0.3.0";
-requires "perl" => "v5.8.0";
-requires "version" => "0";
+requires "perl" => "v5.10.0";
 recommends "Ref::Util::XS" => "0";
 recommends "Type::Tiny::XS" => "0";
 
