@@ -4,6 +4,9 @@ Revision history for {{ $dist->name }}:
   [Documentation]
   - Bump copyright year.
 
+  [Incompatabilies]
+  - Remove support for Perls older than v5.10.
+
 v0.2.0    2018-11-18 21:04:29+00:00 Europe/London
   [Enhancements]
   - Add strict and coerce options to enforce/coerce on set_column.
